# phomemo

./: .gitignore  README.md
config/eclipse/: format_cpp.xml
scripts/phomemo/: setup.bash
src/phomemo/: CMakeLists.txt
src/phomemo/applications/: CMakeLists.txt  phomemo.cpp  test.cpp
src/phomemo/common/: platform.h  printing.h
src/phomemo/communication/: CMakeLists.txt  communication.h  serial.cpp  serial.h
src/phomemo/printer/: CMakeLists.txt  printer.cpp  printer.h
src/phomemo/utility/: CMakeLists.txt  logger.cpp  logger.h
